--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
       </div>
     </nav>
 
-    <!-- Page Content -->
+    <!-- Title Content -->
     <header class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -60,6 +60,7 @@
 
 	{% block main %}{% endblock main %}
 
+  <!-- Bottom nav bar -->
   <footer class="footer mt-5">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom" role="navigation">
       <div class="container">
