--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,22 @@
 {% extends "base.html" %}
 
+<!-- Navbar Button -->
 {% block topNavbar %}
 <a class="nav-link to-top" href="#">Home
   <span class="sr-only">(current)</span>
 </a>
 {% endblock topNavbar %}
 
-
+<!-- Subtitle -->
 {% block secondtitle %}
 <h4 class="mt-3 text-muted">Choose an image</h4>
 {% endblock secondtitle %}
 
-
+<!-- Page Content -->
 {% block main %}
 	 <main class="container mt-5">
-      <div class="row style-image-section">
+	 	<!-- Style image section -->
+      <section class="row style-image-section">
           <div class="col-lg-4">
             <div id="img-bamboo" class="img-item">
               <img class="img-thumbnail style-image" src="{{url_for('static', filename='img/bamboo.jpg') }}" alt="Bamboo">
@@ -30,13 +32,14 @@
               <img class="img-thumbnail style-image" src="{{url_for('static', filename='img/wave.jpg') }}" alt="Wave">
             </div>
           </div>
-        </div>
+        </section>
         <div class="row mt-4">
           <div class="col-lg-12 text-center">
             <h4 class="text-muted" id="selected-style">You choosed: </h4>
           </div>
         </div>
         <HR>
+        <!--  Form upload section -->
         <div class="row mt-4">
           <div class="col-lg-12 text-center">
             <h4 class="text-muted">Upload your image</h4>
@@ -58,6 +61,7 @@
           </div>
         </form>
     </main>
+    <!--  Result section -->
     <section class="result-section container mt-5 d-none">
       <div class="row">
         <div class="col-lg-12 mb-5">
@@ -68,6 +72,7 @@
       </div>
     </section>
 
+    <!--  To top button -->
     <a class="rounded to-top" id="scroll-to-top" href="#page-top">
       <i class="fa fa-angle-up"></i>
     </a>
@@ -75,44 +80,50 @@
 
 {% block script %}
 <script type="text/javascript">
-		"use strict";
-		var selectedStyleImage;
-		function makeForm(e) {
-			event.preventDefault();
-			if($("#img-input").prop("files")[0] != undefined && selectedStyleImage != undefined) {
-			  var form = new FormData();
-			  form.append("file", $("#img-input").prop("files")[0]);
-        // NEED TO CHANGE IN FUTURE
-        form.append("style", selectedStyleImage);
-        alert(form);
-			  sendData(form);
-			  $(".result-section").removeClass("d-none");
-			  $('html, body').animate({
-			                  scrollTop: $(".result-section").offset().top
-			              }, 1000, "easeInQuint");
-			} else if(selectedStyleImage == undefined) {
-			  alert('no style selected');
-			} else {
-			  alert('no uploaded');
-			}
-		};
-		function readURL(input) {
+	"use strict";
+	var selectedStyleImage;
 
-		  if (input.files && input.files[0]) {
-		    var reader = new FileReader();
-
-		    reader.onload = function(e) {
-		      $("#img-preview").css("visibility", "visible");
-		      $("#img-preview").attr("src", e.target.result);
-		    }
-
-		    reader.readAsDataURL(input.files[0]);
-		  }
+	function makeForm(e) {
+		// Prevent default form behavior
+		event.preventDefault();
+		// Check the file is not empty and a style has been selected
+		if($("#img-input").prop("files")[0] != undefined && selectedStyleImage != undefined) {
+			var form = new FormData();
+			form.append("file", $("#img-input").prop("files")[0]);
+        	// NEED TO CHANGE IN FUTURE
+        	form.append("style", selectedStyleImage);
+        	alert(form);
+			sendData(form);
+			// Show the result section
+			$(".result-section").removeClass("d-none");
+			// Scroll to the result section
+			$('html, body').animate({
+			                scrollTop: $(".result-section").offset().top
+			            }, 1000, //Millisecond
+			            "easeInQuint");
+		} else if(selectedStyleImage == undefined) {
+				alert('no style selected');
+		} else {
+			alert('no uploaded');
 		}
+	}
 
-		function sendData(formdata) {
+	// Read the image user choosed to upload
+	function readURL(input) {
+		if (input.files && input.files[0]) {
+			var reader = new FileReader();
+		    reader.onload = function(e) {
+		    	$("#img-preview").css("visibility", "visible");
+		    	$("#img-preview").attr("src", e.target.result);
+		    }
+		    reader.readAsDataURL(input.files[0]);
+		}
+	}
+
+	// Submit form data
+	function sendData(formdata) {
 		alert('send data');
-		  $.ajax({
+		$.ajax({
 		    url: "/upload_image",
 		    data: formdata,
 		    type: "POST",
@@ -122,57 +133,65 @@
             cache: false,
             headers: { "cache-control": "no-cache" },
 		    success: function(response) {
-		              console.log('success');
-		              console.log(typeof(response));
-		              alert('success');
-		              setImage(JSON.parse(response));
-		              
-		          },
-		          error: function(error) {
-		              console.log("fail");
-		              console.log(error);
-		              alert('fail');
-		              alert(error.responseText);
-		          }
-		  });
-		  return false;
-		};
+		        console.log('success');
+		        console.log(typeof(response));
+		        alert('success');
+		        setImage(JSON.parse(response));	              
+		    },
+		    error: function(error) {
+		        console.log("fail");
+		        console.log(error);
+		        alert('fail');
+		        alert(error.responseText);
+		    }
+		});
+	};
 
-		function setImage(data) {
-		  $("#img-output").removeClass("d-none");
-		  $("#img-output").attr("src","data:image/jpeg;base64," + data["image"]);
+	// Set image while the request is success
+	function setImage(data) {
+		$("#img-output").removeClass("d-none");
+		$("#img-output").attr("src","data:image/jpeg;base64," + data["image"]);
+	}
 
-		};
+	// Load this part while the DOM is ready
 	$(function() {
-	  $("#img-input").change(function() {
-	    readURL(this);
-	  });
+		// Listen to the upload image button
+		$("#img-input").change(function() {
+			readURL(this);
+		});
+		// Clean the former selected image
+		$("#img-input").click(function() {
+			$("#img-preview").css("visibility", "hidden");
+			$("#img-output").attr("src","");
+		});
 
-	  $(".style-image").click(function() {
-	    $(".style-image").removeClass("item-onclick");
-	    $(this).addClass("item-onclick");
-	    var selectedId = $(this).parent(".img-item").attr('id');
-	    $("#selected-style").text("You choosed: " + selectedId);
-	    selectedStyleImage = selectedId;
-	  });
+		// Listen to the style image selected event
+		$(".style-image").click(function() {
+	    	$(".style-image").removeClass("item-onclick");
+	    	$(this).addClass("item-onclick");
+	    	var selectedId = $(this).parent(".img-item").attr('id');
+	    	$("#selected-style").text("You choosed: " + selectedId);
+	    	selectedStyleImage = selectedId;
+	  	});
 
+		// To top button
+	  	$(".to-top").click(function() {
+	    	$('html, body').animate({
+	            scrollTop: $("#page-top").offset().top
+	        }, 1000, 
+	        "easeInOutExpo");
+	    	return false;
+	  	});
 
-	  $(".to-top").click(function() {
-	    $('html, body').animate({
-	                      scrollTop: $("#page-top").offset().top
-	                  }, 1000, "easeInOutExpo");
-	    return false;
-	  });
-
-	  $(document).scroll(function() {
-	    var scrollDistance = $(this).scrollTop();
-	    if (scrollDistance > 100) {
-	      $('#scroll-to-top').fadeIn();
-	    } else {
-	      $('#scroll-to-top').fadeOut();
-	    }
-	  });
-
+	  	// Display the to top button
+	  	$(document).scroll(function() {
+	    	var scrollDistance = $(this).scrollTop();
+	    	if (scrollDistance > 100) {
+	      		$('#scroll-to-top').fadeIn();
+	    	} else {
+	      	$('#scroll-to-top').fadeOut();
+	    	}
+	  	});
 	}); 
 </script>
 {% endblock script %}
