--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,20 @@ body {
 	cursor:pointer;
 }
 
+.loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #3498db;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 #img-preview {
 	max-width: 100%;
 	display: block;
@@ -31,6 +45,13 @@ body {
 	height: 50px;
 	font-weight: 900;
 	font-size: larger;
+}
+
+#img-output {
+  max-width: 100%;
+  display: block;
+  height: auto;
+  visibility: hidden;
 }
 
 .result-section {
